--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
+    compile group: 'com.google.guava', name: 'guava', version: '21.0'
+
 }
 
 task fatJar(type: Jar) {
