--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.bpazy'
-version '0.1.0'
+version '0.1.1'
 
 apply plugin: "maven-publish"
 apply plugin: 'com.jfrog.bintray'
@@ -38,6 +38,20 @@ task fatJar(type: Jar) {
     with jar
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: classes) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar, javadocJar
+}
+
 publishing {
     publications {
         MyPublication(MavenPublication) {
@@ -45,6 +59,9 @@ publishing {
             groupId 'com.github.bpazy'
             artifactId 'cqjavaapi'
             version project.version
+
+            artifact sourcesJar
+            artifact javadocJar
         }
     }
 }
