--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.bpazy'
-version '0.1.1'
+version '0.1.3'
 
 apply plugin: "maven-publish"
 apply plugin: 'com.jfrog.bintray'
@@ -52,6 +52,26 @@ artifacts {
     archives sourcesJar, javadocJar
 }
 
+def pomConfig = {
+    licenses {
+        license {
+            name "The Apache Software License, Version 2.0"
+            url "http://www.apache.org/licenses/LICENSE-2.0.txt"
+            distribution "repo"
+        }
+    }
+    developers {
+        developer {
+            id "Bpazy"
+            name "ziyuan"
+            email "hanziyuan08@outlook.com"
+        }
+    }
+    scm {
+        url "https://github.com/Bpazy/cqjavaapi"
+    }
+}
+
 publishing {
     publications {
         MyPublication(MavenPublication) {
@@ -62,6 +82,13 @@ publishing {
 
             artifact sourcesJar
             artifact javadocJar
+            pom.withXml {
+                def root = asNode()
+                root.appendNode('description', 'cq java api base on cqsockerapi')
+                root.appendNode('name', 'cqjavaapi')
+                root.appendNode('url', 'https://github.com/Bpazy/cqjavaapi')
+                root.children().last() + pomConfig
+            }
         }
     }
 }
