--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.bpazy'
-version '0.1.3'
+version '0.2.0'
 
 apply plugin: "maven-publish"
 apply plugin: 'com.jfrog.bintray'
@@ -27,6 +27,8 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
     compile group: 'com.google.guava', name: 'guava', version: '21.0'
 }
+
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 task fatJar(type: Jar) {
     manifest {
