--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.bpazy'
-version '0.2.0'
+version '0.2.1'
 
 apply plugin: "maven-publish"
 apply plugin: 'com.jfrog.bintray'
@@ -21,6 +21,8 @@ repositories {
 }
 
 dependencies {
+    compileOnly "org.projectlombok:lombok:1.16.16"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
